Revelation changelog

---------------[ xxxx-xx-xx : 0.3.1 ]---------------

2004-07-27  Erik Grinaker <erikg@codepoet.no>

	* rewrote the app configuration handling

	* cleaned up the widget code, and added docstrings to all
	classes, methods and functions

	* the configuration is checked on startup, and if not found
	the schema is automatically registered with the gconf
	daemon

	* cleaned up most of the dialog code

2004-07-15  Erik Grinaker <erikg@codepoet.no>

	* when adding an entry the default type is Generic (not Folder)

	* added a preference for automatically saving data when changed

	* code cleanups; moved all app ui code into main app class

2004-07-14  Erik Grinaker <erikg@codepoet.no>

	* rewrote the application use of data files and replaced the
	import/export druids with normal file selectors

2004-07-10  Erik Grinaker <erikg@codepoet.no>

	* rewrote the data file handling, and cleaned up the
	data handlers

2004-07-09  Erik Grinaker <erikg@codepoet.no>

	* rewrote the Undo/Redo code, and moved most of it into the
	UndoQueue class

2004-07-08  Erik Grinaker <erikg@codepoet.no>

	* the OK button in the password dialogs is inactive when it's
	missing input

	* cleaned up the EntryStore code, and merged the DataStore
	and EntryStore classes

2004-06-30  Erik Grinaker <erikg@codepoet.no>

	* file-selectors and the about dialog are set as transients
	for the main app window

2004-06-29  Erik Grinaker <erikg@codepoet.no>

	* miscellaneous code cleanups

	* updated the fpm datahandler to use new Entry class,
	and rewrote conversions routines

	* added importer/exporter for .netrc files

2004-06-22  Erik Grinaker <erikg@codepoet.no>

	* rewrote internal data handling routines to use an Entry
	object instead of a normal dictionary, and Field objects
	instead of a field dict

2004-06-16  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug introduced by recent cleanups, which broke
	the TreeView.set_model() method - caused file locking to
	not empty the treeview